package com.sycosoft.allsee.presentation.components.screens.accountaccesspage

object AccessTokenRequestScreenTestTags {
    const val SCREEN = "access_token_request"

    const val BUTTON_GET_STARTED = "button_get_started"

    const val PROGRESS_BAR = "progress_bar"

    const val TITLE = "title"
    const val TEXT = "text"

    const val ACCESS_TOKEN_INPUT = "access_token_input"
}