package uk.co.jaffakree.allsee.feature_login.components.dialogs

object UserConfirmationDialogTestTags {
    const val TITLE = "user_confirmation_dialog_title"
    const val TEXT = "user_confirmation_dialog_text"
    const val CONFIRM_BUTTON = "user_confirmation_dialog_confirm_button"
    const val DISMISS_BUTTON = "user_confirmation_dialog_dismiss_button"
}